Fix: aligned post card header

--- a/src/components/Card.css
+++ b/src/components/Card.css
@@ -8,6 +8,9 @@
 
 .moyo-postcard--header{
     border-bottom: 1px solid var(--neutral-300);
+    display: flex;
+    flex-direction: row;
+    align-items: center;
 }
 
 .moyo-postcard--text{
@@ -31,8 +34,25 @@
     overflow: hidden;
 }
 
-.profile-picure{
-    height: 50px;
-    width: 50px;
+.profile-picture{
+    height: 30px;
+    width: 30px;
     border-radius: 50%;
+}
+
+.action-button{
+    border: none;
+    border-radius: 20px;
+    padding: 6px 12px;
+    margin-right: 10px;
+    color: var(--neutral-500);
+    background: none;
+}
+
+.action-button:hover{
+    background: var(--neutral-200);
+}
+
+.code-container{
+    transition: display 2s;
 }
